start of projects and samples

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 						<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link js-scroll-trigger" href="#samples">Samples</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a>
 					</li>
 					<li class="nav-item">
@@ -132,94 +135,173 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+					<a class="portfolio-link" data-toggle="modal" href="#radModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/rad.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Threads</h4>
-						<p class="text-muted">Illustration</p>
+						<h4>Applicant Tracking System</h4>
+						<p class="text-muted">scratch built: architect, lead developer, requirements, documentation, training</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+					<a class="portfolio-link" data-toggle="modal" href="#murphyModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/murphy.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Explore</h4>
-						<p class="text-muted">Graphic Design</p>
+						<h4>Inspiring the public with Machine Learning</h4>
+						<p class="text-muted">inventor, architect, developer</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+					<a class="portfolio-link" data-toggle="modal" href="#mindreaderModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/mindreader.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Finish</h4>
-						<p class="text-muted">Identity</p>
+						<h4>Simplifying Machine Learning</h4>
+						<p class="text-muted">inventor, architect, developer, trainer</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+					<a class="portfolio-link" data-toggle="modal" href="#feedbackModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/Feedback Analytics.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Lines</h4>
-						<p class="text-muted">Branding</p>
+						<h4>Applying Machine Learning</h4>
+						<p class="text-muted">inventor, developer, presentor, data analyst</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+					<a class="portfolio-link" data-toggle="modal" href="#robotModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/robot.jpg" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Southwest</h4>
-						<p class="text-muted">Website Design</p>
+						<h4>STEM robotic arm</h4>
+						<p class="text-muted">inventor, architect, developer</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 portfolio-item">
-					<a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+					<a class="portfolio-link" data-toggle="modal" href="#imagesModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/images.png" alt="">
 					</a>
 					<div class="portfolio-caption">
-						<h4>Window</h4>
-						<p class="text-muted">Photography</p>
+						<h4>Real-time 3D product images</h4>
+						<p class="text-muted">inventor, architect, principle developer</p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 portfolio-item">
+					<a class="portfolio-link" data-toggle="modal" href="#printmanagerModal">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-content">
+								<i class="fas fa-plus fa-3x"></i>
+							</div>
+						</div>
+						<img class="img-fluid img-size" src="img/portfolio/printmanager.png" alt="">
+					</a>
+					<div class="portfolio-caption">
+						<h4>Streamlining Workflows</h4>
+						<p class="text-muted">analyst, developer</p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 portfolio-item">
+					<a class="portfolio-link" data-toggle="modal" href="#automationModal">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-content">
+								<i class="fas fa-plus fa-3x"></i>
+							</div>
+						</div>
+						<img class="img-fluid img-size" src="img/portfolio/automation.png" alt="">
+					</a>
+					<div class="portfolio-caption">
+						<h4>Automation of industrial cutter</h4>
+						<p class="text-muted">developer</p>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 portfolio-item">
+					<a class="portfolio-link" data-toggle="modal" href="#reportsModal">
+						<div class="portfolio-hover">
+							<div class="portfolio-hover-content">
+								<i class="fas fa-plus fa-3x"></i>
+							</div>
+						</div>
+						<img class="img-fluid img-size" src="img/portfolio/reports.png" alt="">
+					</a>
+					<div class="portfolio-caption">
+						<h4>Business Intelligence</h4>
+						<p class="text-muted">analyst, developer</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<!-- Samples -->
+	<section id="samples">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading text-uppercase">Samples</h2>
+					<h3 class="section-subheading text-muted">get a flavor for my style</h3>
+					<h3 class="section-subheading">Though I can't share any of my code I've developed for any of the great companies I worked at, I am always useing my skills to help out on the side.  Here are a few recent works that may give an idea of what I can do.</h3>
+				</div>
+			</div>
+			<div class="row">
+				<h5 class="section-heading text-uppercase">Solid Code Design</h5>
+			</div>
+			<div class="row text-center mb-5">
+
+				<div class="col-md-8">
+					As part of a recent interview, I was given a timed tasked in which I was given some project code and asked to design a way to easly maintain additional custom data sources, calculators and publishers without requiring many changes to the existing code.  I opted for a design that demonstrated SOLID principles and returned my answer within the hour.  I was pleased with how I performed and thought it was a good example of my ability to comprehend and improve upon code quickly and efficiently using best practices.
+				</div>
+				<div class="col-md-4">
+					<a href="https://github.com/zaront/TemperatureProcessor">[Repo]</a><br/>
+					<a href="https://github.com/zaront/TemperatureProcessor/commit/43341a6de41b00049e50a42d2b82349cf154f758">[My Changes Only]</a>
+				</div>
+			</div>
+			<div class="row">
+				<h5 class="section-heading text-uppercase">Machine Learning</h5>
+			</div>
+			<div class="row text-center mb-5">
+
+				<div class="col-md-8">
+					I was recently asked if I could create a way to use an image to make finding 3D assets easier.  I immediatly thought of training a colvolutional neural net using tensorflow.  I came up with 3 diffrent ideas that might match their needs and created this demo showcasing them the next day.  The ideas centered using the images to search by category, similar look or similar 3D shape.
+				</div>
+				<div class="col-md-4">
+					<a href="https://github.com/zaront/tensorflow-assetstore">[Repo]</a>
+				</div>
+			</div>
+		</div>
+</section>
 	<!-- Testimonials -->
-	<section id="testimonials">
+	<section class="bg-light" id="testimonials">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -383,14 +465,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<span class="copyright">Handcrafted by me - Zaron Thompson 2018</span>
+					<span class="copyright">this site was handcrafted by me - Zaron</span>
 				</div>
 			</div>
 		</div>
 	</footer>
 	<!-- Portfolio Modals -->
-	<!-- Modal 1 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- RAD Modal -->
+	<div class="portfolio-modal modal fade" id="radModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -423,8 +505,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Modal 2 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- Murphy Modal -->
+	<div class="portfolio-modal modal fade" id="murphyModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -457,8 +539,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Modal 3 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- mind reader Modal -->
+	<div class="portfolio-modal modal fade" id="mindreaderModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -491,8 +573,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Modal 4 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- feedback Modal -->
+	<div class="portfolio-modal modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -525,8 +607,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- Modal 5 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- robot Modal -->
+	<div class="portfolio-modal modal fade" id="robotModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -559,8 +641,110 @@
 			</div>
 		</div>
 	</div>
-	<!-- Modal 6 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+	<!-- images Modal -->
+	<div class="portfolio-modal modal fade" id="imagesModal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl"></div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-8 mx-auto">
+							<div class="modal-body">
+								<!-- Project Details Go Here -->
+								<h2 class="text-uppercase">Project Name</h2>
+								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<ul class="list-inline">
+									<li>Date: January 2017</li>
+									<li>Client: Window</li>
+									<li>Category: Photography</li>
+								</ul>
+								<button class="btn btn-primary" data-dismiss="modal" type="button">
+									<i class="fas fa-times"></i>
+									Close Project
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- printmanager Modal -->
+	<div class="portfolio-modal modal fade" id="printmanagerModal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl"></div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-8 mx-auto">
+							<div class="modal-body">
+								<!-- Project Details Go Here -->
+								<h2 class="text-uppercase">Project Name</h2>
+								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<ul class="list-inline">
+									<li>Date: January 2017</li>
+									<li>Client: Window</li>
+									<li>Category: Photography</li>
+								</ul>
+								<button class="btn btn-primary" data-dismiss="modal" type="button">
+									<i class="fas fa-times"></i>
+									Close Project
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- automation Modal -->
+	<div class="portfolio-modal modal fade" id="automationModal" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl"></div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-8 mx-auto">
+							<div class="modal-body">
+								<!-- Project Details Go Here -->
+								<h2 class="text-uppercase">Project Name</h2>
+								<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+								<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
+								<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+								<ul class="list-inline">
+									<li>Date: January 2017</li>
+									<li>Client: Window</li>
+									<li>Category: Photography</li>
+								</ul>
+								<button class="btn btn-primary" data-dismiss="modal" type="button">
+									<i class="fas fa-times"></i>
+									Close Project
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- reports Modal -->
+	<div class="portfolio-modal modal fade" id="reportsModal" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="close-modal" data-dismiss="modal">
