--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid img-size" src="img/portfolio/murphy.png" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/murphy.PNG" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h4>Inspiring the public with Machine Learning</h4>
@@ -169,7 +169,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid img-size" src="img/portfolio/mindreader.png" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/MindReader.png" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h4>Simplifying Machine Learning</h4>
@@ -197,7 +197,7 @@
 								<i class="fas fa-plus fa-3x"></i>
 							</div>
 						</div>
-						<img class="img-fluid img-size" src="img/portfolio/robot.jpg" alt="">
+						<img class="img-fluid img-size" src="img/portfolio/robot.JPG" alt="">
 					</a>
 					<div class="portfolio-caption">
 						<h4>STEM robotic arm</h4>
