contact image update

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading text-uppercase">Let's build something together</h2>
-					<h3 class="section-subheading text-muted"> I'd love to discuss how I can help with your project, or maybe just ask for my resume.</h3>
+					<h3 class="section-subheading strong-color"> I'd love to discuss how I can help with your project, or maybe just ask for my resume.</h3>
 				</div>
 			</div>
 			<div class="row">
