--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<!-- Custom styles for this template -->
 	<link href="css/agency.css" rel="stylesheet">
 	<link href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" integrity="sha256-HtCCUh9Hkh//8U1OwcbD8epVEUdBvuI8wj1KtqMhNkI=" crossorigin="anonymous" />
 
 </head>
 
@@ -82,7 +83,7 @@
 				</div>
 			</div>
 			<div class="row text-center">
-				<div class="col-md-4">
+				<div class="col-md-4 wow fadeIn" data-wow-delay="150ms">
 					<span class="fa-stack fa-4x">
 						<i class="fas fa-circle fa-stack-2x text-primary"></i>
 						<i class="fab fa-accessible-icon fa-stack-1x fa-inverse"></i>
@@ -95,7 +96,7 @@
 					<p class="text-muted">Business Intelligence <br />especially ones that reveal novel insights</p>
 					<p class="text-muted">Anything that...<br /> whirls, flashes or moves stuff around</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 wow fadeIn" data-wow-delay="300ms">
 					<span class="fa-stack fa-4x">
 						<i class="fas fa-circle fa-stack-2x text-primary"></i>
 						<i class="fas fa-tachometer-alt fa-stack-1x fa-inverse"></i>
@@ -112,7 +113,7 @@
 					<h7 class="service-heading">Automation</h7>
 					<p class="text-muted">Arduino, Raspberry Pi, Windows automation API</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 wow fadeIn" data-wow-delay="450ms">
 					<span class="fa-stack fa-4x">
 						<i class="fas fa-circle fa-stack-2x text-primary"></i>
 						<i class="fas fa-handshake fa-stack-1x fa-inverse"></i>
@@ -138,7 +139,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="150ms">
 					<a class="portfolio-link" data-toggle="modal" href="#radModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -152,7 +153,7 @@
 						<p class="text-muted">architect, lead developer, requirements, documentation, training</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="300ms">
 					<a class="portfolio-link" data-toggle="modal" href="#murphyModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -166,7 +167,7 @@
 						<p class="text-muted">inventor, architect, developer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="450ms">
 					<a class="portfolio-link" data-toggle="modal" href="#mindreaderModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -180,7 +181,7 @@
 						<p class="text-muted">inventor, architect, developer, trainer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="150ms">
 					<a class="portfolio-link" data-toggle="modal" href="#feedbackModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -194,7 +195,7 @@
 						<p class="text-muted">inventor, developer, presenter, data analyst</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="300ms">
 					<a class="portfolio-link" data-toggle="modal" href="#robotModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -208,7 +209,7 @@
 						<p class="text-muted">inventor, architect, developer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="450ms">
 					<a class="portfolio-link" data-toggle="modal" href="#imagesModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -222,7 +223,7 @@
 						<p class="text-muted">inventor, architect, principle developer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="150ms">
 					<a class="portfolio-link" data-toggle="modal" href="#printmanagerModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -236,7 +237,7 @@
 						<p class="text-muted">analyst, developer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="300ms">
 					<a class="portfolio-link" data-toggle="modal" href="#automationModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -250,7 +251,7 @@
 						<p class="text-muted">developer</p>
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+				<div class="col-md-4 col-sm-6 portfolio-item wow fadeIn" data-wow-delay="450ms">
 					<a class="portfolio-link" data-toggle="modal" href="#reportsModal">
 						<div class="portfolio-hover">
 							<div class="portfolio-hover-content">
@@ -694,7 +695,7 @@
 								<p>
 									<a href="https://www.youtube.com/watch?v=yJqpT4QUZOg&list=PLLITLAjikAnqF5Hhl6aByPAVQg2gPsOOm" class="resource-link">dev video playlist</a>
 									<a href="#" data-featherlight="img/robot.JPG" class="resource-link"><img src="img/robot.JPG" title="3D printed, Arduino based robot arm" /></a>
-									<a href="#" data-featherlight="img/robot/pencil.JPG" class="resource-link"><img src="img/robot/pencil.JPG" title="software can be used to create on its own"/></a>
+									<a href="#" data-featherlight="img/robot/pencil.JPG" class="resource-link"><img src="img/robot/pencil.JPG" title="software can be used to create on its own" /></a>
 									<a href="#" data-featherlight="img/robot/candy.JPG" class="resource-link"><img src="img/robot/candy.JPG" title="gripper supple enough to pick up common candies" /></a>
 									<a href="#" data-featherlight="img/robot/parts.JPG" class="resource-link"><img src="img/robot/parts.JPG" title="parts included in the kit" /></a>
 									<a href="https://github.com/zaront/robotarm-samplecode/" class="resource-link">sample code</a>
@@ -833,15 +834,19 @@
 								<img class="img-fluid d-block mx-auto" src="img/automation.png" alt="">
 								<p>After a vendor failed to deliver on an 8 month long project to automate an <a href="https://www.summaamerica.com/en/f-series">industrial cutting machine</a>, I stepped in and developed the solution in 2 weeks without access to the machine from 2K miles away, using webcams.  The solution lowered wastage by 60% and saved the company 200K in the first month.</p>
 								<h4 class="text-uppercase">Problem</h4>
-								<p>The company wanted a safe, touch free way to continualy queue and deque work for the cutter the cutter in any order the opporator may choose.  
-								Its current software didn't support that.  Also, it had a build in canera in its toolhead for alighning crooked or worped designs, but it required manual intervention through its software to check and correct problems.
-								The company had paid to have the equiment manufacturer custom build a solution, but after 8 months it was clear the vendor solution wasn't going to meet the requirement.</p>
+								<p>
+									The company wanted a safe, touch free way to continualy queue and deque work for the cutter the cutter in any order the opporator may choose.
+									Its current software didn't support that.  Also, it had a build in canera in its toolhead for alighning crooked or worped designs, but it required manual intervention through its software to check and correct problems.
+									The company had paid to have the equiment manufacturer custom build a solution, but after 8 months it was clear the vendor solution wasn't going to meet the requirement.
+								</p>
 								<h4 class="text-uppercase">Solution</h4>
-								<p>I redesigned the printed media for the cutter to include barcodes and special alignment markers.  knowing where the markers were, I used windows automation API to automate the vendors software to find and correct problems with its markers without human intervention.  
-								I tapped into the machines built in camera and used it to automate reading barcodes to load proper cut files.  
-								I used <a href="https://opencv.org/">OpenCV</a> and <a href="http://www.roborealm.com/">RoboRealm</a> with the webcam to search for new media that may have been placed into the machine by an opporator  
-								I used an <a href="https://www.arduino.cc/">Arduino</a> with attached custom sirens and lights to indicate safe times in the workflow for an opporator to be able to queue up new work, or to signal when attention was needed.  
-								Finaly, the entire system was patched into their current production workflow sending proper telemetry and automation signals to integrate in a hands free manor.</p>
+								<p>
+									I redesigned the printed media for the cutter to include barcodes and special alignment markers.  knowing where the markers were, I used windows automation API to automate the vendors software to find and correct problems with its markers without human intervention.
+									I tapped into the machines built in camera and used it to automate reading barcodes to load proper cut files.
+									I used <a href="https://opencv.org/">OpenCV</a> and <a href="http://www.roborealm.com/">RoboRealm</a> with the webcam to search for new media that may have been placed into the machine by an opporator
+									I used an <a href="https://www.arduino.cc/">Arduino</a> with attached custom sirens and lights to indicate safe times in the workflow for an opporator to be able to queue up new work, or to signal when attention was needed.
+									Finaly, the entire system was patched into their current production workflow sending proper telemetry and automation signals to integrate in a hands free manor.
+								</p>
 								<p>Making this more challenging was the fact that I was 2k miles away and couldn't interacted with the cutter directly.  So I had opporators mount a webcam to be able to see the cutter and talked to them over the phone so they were my hands while developing and testing the solution.</p>
 								<ul class="list-inline text-left">
 									<li><span class="font-weight-bold">Client:</span> PrepSportswear</li>
@@ -914,6 +919,10 @@
 	<!--<script src="js/contact_me.js"></script>-->
 	<!-- Custom scripts for this template -->
 	<script src="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 	<script src="js/agency.js"></script>
 
 </body>
