little more animation

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading text-uppercase">Hi, I'm Zaron.</h2>
-					<h3 class="section-subheading text-muted">
+					<h2 class="section-heading text-uppercase wow fadeIn" data-wow-offset="150" data-wow-duration="3s" data-wow-delay="150ms">Hi, I'm Zaron.</h2>
+					<h3 class="section-subheading text-muted wow fadeIn"  data-wow-offset="150"  data-wow-duration="3s" data-wow-delay="600ms">
 						I beleive great technology empowers people to be more
 					</h3>
 					<h3 class="section-subheading text-muted">
